# yodel

./: .gitignore  Cargo.toml  Makefile  README.md  config.yaml  index.html
frontend/: .env.development  package.json
frontend/public/: index.html
frontend/src/: App.tsx
src/: config.rs  errors.rs  jobs.rs  main.rs  websocket.rs
