[package]
name = "yodel"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-web = "3"
actix-web-actors = "3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
terminator = "0.1.0"

[profile.release]
lto = "thin"
